--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta 
+  name="viewport" 
+  content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+/>
+
   <title>Vite + React</title>
 
   <!-- PWA -->
@@ -19,8 +23,7 @@
     /* Ajusta conteúdo pra não ser cortado pelo notch/status bar */
     body {
       padding-top: env(safe-area-inset-top);
-      margin: 0;
-      background-color: #F7F7F7; /* fundo do app */
+      margin: 0; 
     }
   </style>
 </head>
